Refine dashboard descriptions for clarity and detail
Updated descriptions for various dashboards to enhance clarity and detail.

--- a/index.html
+++ b/index.html
@@ -73,7 +73,6 @@
       background: #4ed81d;
     }
 
-    /* Dashboard dropdowns */
     details.dashboard {
       border-bottom: 1px solid var(--border);
     }
@@ -139,6 +138,7 @@
       font-size: 0.95rem;
       color: #374151;
       max-width: 900px;
+      margin-bottom: 1rem;
     }
 
     .hint {
@@ -204,8 +204,8 @@
         <details class="dashboard">
           <summary>🗺️ Land Cover Dashboard</summary>
           <div class="dash-desc">
-            National land-cover maps, statistics, and trends for land-use and environmental
-            planning, monitoring, and reporting.
+            National land-cover maps, statistics, and trends for land-use and
+            environmental planning, monitoring, and reporting.
             <br />
             <a href="https://www.landcoverstats.gov.ls" target="_blank">Open dashboard ↗</a>
           </div>
@@ -214,7 +214,8 @@
         <details class="dashboard">
           <summary>📍 ROLL Field Dashboard</summary>
           <div class="dash-desc">
-            Field-based baseline data for Regeneration Of Landscapes And Livelihoods Project.
+            Field-based baseline and monitoring data for the Regeneration of
+            Landscapes and Livelihoods (ROLL) Project.
             <br />
             <a href="https://roll-project-ff0bb.web.app/" target="_blank">Open dashboard ↗</a>
           </div>
@@ -237,7 +238,8 @@
         <details class="dashboard">
           <summary>🌾 Rangeland Health</summary>
           <div class="dash-desc">
-            Assessment of national rangeland condition,species diversity and environmental indicators  .
+            National assessment of rangeland condition, species diversity,
+            productivity, and environmental indicators.
             <br />
             <a href="https://dashboards.icraf.org/app/lesotho_rangeland_health_dashboard" target="_blank">Open dashboard ↗</a>
           </div>
@@ -246,8 +248,8 @@
         <details class="dashboard">
           <summary>🐦 Lesotho Avifauna</summary>
           <div class="dash-desc">
-            Interactive exploration of bird species distribution and observation
-            records across Lesotho.
+            Interactive visualization of bird species distribution and
+            observation records across Lesotho.
             <br />
             <a href="https://tsmafantiri.shinyapps.io/LsoAvifaunaApp/" target="_blank">Open dashboard ↗</a>
           </div>
@@ -256,7 +258,8 @@
         <details class="dashboard">
           <summary>🦌 Species Searcher</summary>
           <div class="dash-desc">
-            Biodiversity search and visualization tool for rangeland species data.
+            Biodiversity search and visualization tool for rangeland and
+            wildlife species data.
             <br />
             <a href="https://tsmafantiri.shinyapps.io/LSOEnviroApp/" target="_blank">Open dashboard ↗</a>
           </div>
@@ -267,8 +270,8 @@
         <details class="dashboard">
           <summary>🏭 Emissions Monitor</summary>
           <div class="dash-desc">
-            Spatial monitoring of gas emissions and pollution
-            to support climate mitigation and reporting.
+            Spatial monitoring of gas emissions and pollution to support
+            climate mitigation, analysis, and reporting.
             <br />
             <a href="https://nifty-vault-332121.projects.earthengine.app/view/lesotho-emmissions-monitoring-app" target="_blank">Open dashboard ↗</a>
           </div>
@@ -301,20 +304,44 @@
   <main>
     <div class="card">
       <h2>Welcome</h2>
+
       <p>
-        This portal provides unified access to key geospatial dashboards
-        supporting land management, soil assessment, biodiversity monitoring,
-        and climate-related analysis in Lesotho.
+        This portal provides unified access to key geospatial dashboards supporting
+        land management, soil assessment, biodiversity monitoring, and climate-related
+        analysis in Lesotho. It serves as a centralized gateway to spatial information
+        systems developed by national institutions and partners, enabling users to
+        efficiently discover, access, and apply geospatial evidence.
       </p>
 
       <p>
-        Each dashboard opens in a new tab to ensure full analytical
-        functionality and optimal performance.
+        The integration of these dashboards is essential for informed decision-making,
+        as land, soil, biodiversity, and climate systems are inherently interconnected.
+        Policies, interventions, or management actions in one sector often have direct
+        and indirect implications for others. Integrated access supports a holistic
+        understanding of landscape dynamics and environmental change.
+      </p>
+
+      <p>
+        By strengthening coordination among government ministries, researchers,
+        development partners, and implementing agencies, the portal reduces duplication
+        of effort, promotes consistency in data interpretation, and enhances the use of
+        shared evidence for policy formulation, project planning, monitoring, and
+        reporting. This is particularly important for national priorities such as
+        sustainable land management, climate resilience, ecosystem restoration, and
+        biodiversity conservation.
+      </p>
+
+      <p>
+        Rather than replacing individual systems, the portal preserves the full
+        analytical depth and functionality of each dashboard while improving visibility,
+        interoperability, and usability. Users are encouraged to consult multiple
+        dashboards collectively to support integrated planning, adaptive management,
+        and evidence-based decision-making in the Kingdom of Lesotho.
       </p>
 
       <div class="hint">
         👉 Expand a dashboard on the left to view its description, then click
-        <strong>Open dashboard</strong>.
+        <strong>Open dashboard</strong> to access the full system in a new tab.
       </div>
     </div>
   </main>
