--- a/index.html
+++ b/index.html
@@ -70,7 +70,7 @@
       font-weight: 700;
       letter-spacing: 0.08em;
       color: var(--text-muted);
-      background: #4ed81d;
+      background: #eaf2ff;
     }
 
     details.dashboard {
@@ -150,6 +150,89 @@
       font-size: 0.9rem;
     }
 
+    /* =====================
+       FEEDBACK SECTION
+       ===================== */
+
+    .feedback {
+      margin-top: 2.5rem;
+      padding-top: 2rem;
+      border-top: 1px solid var(--border);
+    }
+
+    .feedback h2 {
+      font-size: 1.3rem;
+      color: var(--primary);
+      margin-bottom: 0.6rem;
+    }
+
+    .feedback p {
+      max-width: 820px;
+    }
+
+    .feedback-form {
+      margin-top: 1.5rem;
+      max-width: 820px;
+    }
+
+    .feedback-form label {
+      display: block;
+      font-size: 0.85rem;
+      font-weight: 600;
+      margin: 1rem 0 0.35rem;
+    }
+
+    .feedback-form label span {
+      font-weight: 400;
+      color: var(--text-muted);
+    }
+
+    .feedback-form input,
+    .feedback-form select,
+    .feedback-form textarea {
+      width: 100%;
+      padding: 0.65rem 0.75rem;
+      border-radius: 8px;
+      border: 1px solid var(--border);
+      font-size: 0.9rem;
+      font-family: inherit;
+    }
+
+    .feedback-form textarea {
+      min-height: 120px;
+      resize: vertical;
+    }
+
+    .feedback-form input:focus,
+    .feedback-form select:focus,
+    .feedback-form textarea:focus {
+      outline: none;
+      border-color: var(--primary);
+      box-shadow: 0 0 0 2px rgba(11,94,215,0.1);
+    }
+
+    .form-row {
+      display: grid;
+      grid-template-columns: 1fr 1fr;
+      gap: 1rem;
+    }
+
+    .feedback-form button {
+      margin-top: 1.5rem;
+      padding: 0.65rem 1.4rem;
+      border-radius: 999px;
+      border: none;
+      background: var(--primary);
+      color: #ffffff;
+      font-size: 0.9rem;
+      font-weight: 600;
+      cursor: pointer;
+    }
+
+    .feedback-form button:hover {
+      background: var(--primary-dark);
+    }
+
     footer {
       background: #f3f4f6;
       border-top: 1px solid var(--border);
@@ -173,10 +256,15 @@
       .container {
         flex-direction: column;
       }
+
       aside {
         width: 100%;
         border-right: none;
         border-bottom: 1px solid var(--border);
+      }
+
+      .form-row {
+        grid-template-columns: 1fr;
       }
     }
   </style>
@@ -198,15 +286,13 @@
   <aside>
     <nav>
       <ul>
-
         <li class="section">LAND</li>
 
         <details class="dashboard">
           <summary>🗺️ Land Cover Dashboard</summary>
           <div class="dash-desc">
-            National land-cover maps, statistics, and trends for land-use and
-            environmental planning, monitoring, and reporting.
-            <br />
+            National land-cover maps, statistics, and trends for planning and monitoring.
+            <br>
             <a href="https://www.landcoverstats.gov.ls" target="_blank">Open dashboard ↗</a>
           </div>
         </details>
@@ -214,9 +300,8 @@
         <details class="dashboard">
           <summary>📍 ROLL Field Dashboard</summary>
           <div class="dash-desc">
-            Field-based baseline and monitoring data for the Regeneration of
-            Landscapes and Livelihoods (ROLL) Project.
-            <br />
+            Field-based baseline and monitoring data for the ROLL Project.
+            <br>
             <a href="https://roll-project-ff0bb.web.app/" target="_blank">Open dashboard ↗</a>
           </div>
         </details>
@@ -226,9 +311,8 @@
         <details class="dashboard">
           <summary>🌱 Soil Information System</summary>
           <div class="dash-desc">
-            Soil property maps, fertility indicators, and decision-support tools
-            for agriculture, conservation, and land evaluation.
-            <br />
+            Soil property maps and decision-support tools.
+            <br>
             <a href="https://www.lesis.gov.ls" target="_blank">Open dashboard ↗</a>
           </div>
         </details>
@@ -238,9 +322,8 @@
         <details class="dashboard">
           <summary>🌾 Rangeland Health</summary>
           <div class="dash-desc">
-            National assessment of rangeland condition, species diversity,
-            productivity, and environmental indicators.
-            <br />
+            National rangeland condition and productivity indicators.
+            <br>
             <a href="https://dashboards.icraf.org/app/lesotho_rangeland_health_dashboard" target="_blank">Open dashboard ↗</a>
           </div>
         </details>
@@ -248,20 +331,9 @@
         <details class="dashboard">
           <summary>🐦 Lesotho Avifauna</summary>
           <div class="dash-desc">
-            Interactive visualization of bird species distribution and
-            observation records across Lesotho.
-            <br />
+            Bird species distribution and observation records.
+            <br>
             <a href="https://tsmafantiri.shinyapps.io/LsoAvifaunaApp/" target="_blank">Open dashboard ↗</a>
-          </div>
-        </details>
-
-        <details class="dashboard">
-          <summary>🦌 Species Searcher</summary>
-          <div class="dash-desc">
-            Biodiversity search and visualization tool for rangeland and
-            wildlife species data.
-            <br />
-            <a href="https://tsmafantiri.shinyapps.io/LSOEnviroApp/" target="_blank">Open dashboard ↗</a>
           </div>
         </details>
 
@@ -270,154 +342,89 @@
         <details class="dashboard">
           <summary>🏭 Emissions Monitor</summary>
           <div class="dash-desc">
-            Spatial monitoring of gas emissions and pollution to support
-            climate mitigation, analysis, and reporting.
-            <br />
+            Spatial monitoring of gas emissions and pollution.
+            <br>
             <a href="https://nifty-vault-332121.projects.earthengine.app/view/lesotho-emmissions-monitoring-app" target="_blank">Open dashboard ↗</a>
           </div>
         </details>
-
-        <details class="dashboard">
-          <summary>🌍 CMIP6 Climate Data Extractor</summary>
-          <div class="dash-desc">
-            Extraction of CMIP6 climate variables for scenario analysis,
-            climate risk assessment, and adaptation planning.
-            <br />
-            <a href="https://nifty-vault-332121.projects.earthengine.app/view/cmip6-multi-variable-extractor-for-metolong" target="_blank">Open dashboard ↗</a>
-          </div>
-        </details>
-
-        <details class="dashboard">
-          <summary>🔥 Fire Activity</summary>
-          <div class="dash-desc">
-            Visualization of fire occurrence, frequency, and temporal trends
-            derived from satellite observations.
-            <br />
-            <a href="https://africageoportal.maps.arcgis.com/apps/instant/charts/index.html?appid=b5348bb23f83414ca6cb74533df828c6" target="_blank">Open dashboard ↗</a>
-          </div>
-        </details>
-
       </ul>
     </nav>
   </aside>
 
   <main>
     <div class="card">
+
       <h2>Welcome</h2>
 
       <p>
         This portal provides unified access to key geospatial dashboards supporting
         land management, soil assessment, biodiversity monitoring, and climate-related
-        analysis in Lesotho. It serves as a centralized gateway to spatial information
-        systems developed by national institutions and partners, enabling users to
-        efficiently discover, access, and apply geospatial evidence.
+        analysis in Lesotho.
       </p>
 
       <p>
-        The integration of these dashboards is essential for informed decision-making,
-        as land, soil, biodiversity, and climate systems are inherently interconnected.
-        Policies, interventions, or management actions in one sector often have direct
-        and indirect implications for others. Integrated access supports a holistic
-        understanding of landscape dynamics and environmental change.
-      </p>
-
-      <p>
-        By strengthening coordination among government ministries, researchers,
-        development partners, and implementing agencies, the portal reduces duplication
-        of effort, promotes consistency in data interpretation, and enhances the use of
-        shared evidence for policy formulation, project planning, monitoring, and
-        reporting. This is particularly important for national priorities such as
-        sustainable land management, climate resilience, ecosystem restoration, and
-        biodiversity conservation.
-      </p>
-
-      <p>
-        Rather than replacing individual systems, the portal preserves the full
-        analytical depth and functionality of each dashboard while improving visibility,
-        interoperability, and usability. Users are encouraged to consult multiple
-        dashboards collectively to support integrated planning, adaptive management,
-        and evidence-based decision-making in the Kingdom of Lesotho.
+        Integrated access supports coordinated planning, evidence-based policy
+        formulation, and sustainable landscape management.
       </p>
 
       <div class="hint">
         👉 Expand a dashboard on the left to view its description, then click
-        <strong>Open dashboard</strong> to access the full system in a new tab.
+        <strong>Open dashboard</strong> to access the full system.
       </div>
-      <div class="card">
-  <h2>Feedback & Continuous Improvement</h2>
 
-  <p>
-    Your feedback helps improve this portal and its dashboards.
-    All submissions are sent directly to the portal administration team
-    to support continual improvement and better service delivery.
-  </p>
+      <!-- FEEDBACK -->
+      <section class="feedback">
+        <h2>Feedback & Continuous Improvement</h2>
+        <p>
+          Your feedback supports continuous improvement of this portal and its
+          dashboards. Submissions are reviewed by the administration team.
+        </p>
 
-  <form action="https://formspree.io/f/meooporn" method="POST">
+        <form action="https://formspree.io/f/meooporn" method="POST" class="feedback-form">
 
-    <label for="name">Your Name (optional)</label>
-    <input type="text" id="name" name="name" placeholder="Your name">
+          <div class="form-row">
+            <div>
+              <label>Your Name <span>(optional)</span></label>
+              <input type="text" name="name">
+            </div>
 
-    <label for="role">Your Role (optional)</label>
-    <select id="role" name="role">
-      <option value="">Select role</option>
-      <option>Government / Ministry</option>
-      <option>Researcher / Academic</option>
-      <option>Development Partner</option>
-      <option>NGO / Civil Society</option>
-      <option>Private Sector</option>
-      <option>Other</option>
-    </select>
+            <div>
+              <label>Your Role <span>(optional)</span></label>
+              <select name="role">
+                <option value="">Select role</option>
+                <option>Government / Ministry</option>
+                <option>Researcher / Academic</option>
+                <option>Development Partner</option>
+                <option>NGO / Civil Society</option>
+                <option>Private Sector</option>
+                <option>Other</option>
+              </select>
+            </div>
+          </div>
 
-    <label for="dashboard">Dashboard Referenced (optional)</label>
-    <input
-      type="text"
-      id="dashboard"
-      name="dashboard"
-      placeholder="e.g. Land Cover Dashboard"
-    >
+          <label>Dashboard Referenced <span>(optional)</span></label>
+          <input type="text" name="dashboard">
 
-    <label for="message">Your Feedback or Suggestion</label>
-    <textarea
-      id="message"
-      name="message"
-      placeholder="Describe issues, suggestions, data gaps, or additional needs..."
-      required
-    ></textarea>
+          <label>Your Feedback</label>
+          <textarea name="message" required></textarea>
 
-    <label for="email">Contact Email (optional)</label>
-    <input
-      type="email"
-      id="email"
-      name="email"
-      placeholder="you@example.com"
-    >
+          <label>Contact Email <span>(optional)</span></label>
+          <input type="email" name="email">
 
-    <!-- Redirect after submission -->
-    <input
-      type="hidden"
-      name="_redirect"
-      value="https://yourwebsite.com/thank-you.html"
-    >
+          <input type="hidden" name="_redirect" value="https://yourwebsite.com/thank-you.html">
+          <input type="text" name="_gotcha" style="display:none">
 
-    <!-- Honeypot spam protection -->
-    <input type="text" name="_gotcha" style="display:none">
+          <button type="submit">Send Feedback</button>
+        </form>
+      </section>
 
-    <button type="submit">Send Feedback</button>
-  </form>
-</div>
     </div>
   </main>
 
 </div>
-  
 
 <footer>
   © 2026 Lesotho Geospatial Dashboards | Designed & Built by OCAES
-  <div>
-    <a href="https://www.facebook.com/Ocaes" target="_blank">Facebook</a>
-    <a href="https://x.com/ocaes_lso" target="_blank">X</a>
-    <a href="https://heylink.me/tsitsomafantiri/" target="_blank">HeyLink.me</a>
-  </div>
 </footer>
 
 </body>
