--- a/index.html
+++ b/index.html
@@ -70,7 +70,7 @@
       font-weight: 700;
       letter-spacing: 0.08em;
       color: var(--text-muted);
-      background: #eaf2ff;
+      background: #88e788;
     }
 
     details.dashboard {
