--- a/index.html
+++ b/index.html
@@ -645,7 +645,7 @@
       <path d="M13 20L16.5 23.5L23 16" stroke="#4ead7a" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"/>
     </svg>
     <div>
-      <div class="logo-title">Lesotho Geospatial Portal</div>
+      <div class="logo-title">Lesotho Geospatial Dashboards Portal</div>
       <div class="logo-sub">National Data &amp; Decision Systems</div>
     </div>
   </div>
@@ -720,7 +720,7 @@
       </svg>
     </div>
     <div class="hero-text">
-      <h1>Lesotho Geospatial Dashboards</h1>
+      <h1>Lesotho Geospatial Dashboards Portal</h1>
       <span class="hero-sub">A centralized gateway to national land, soil, biodiversity &amp; climate data systems</span>
     </div>
   </div>
