--- a/index.html
+++ b/index.html
@@ -1038,7 +1038,11 @@
 
 <!-- FOOTER -->
 <footer>© 2026 Lesotho Geospatial Dashboards &nbsp;|&nbsp; Designed &amp; Built by OCAES</footer>
-
+  <div class="social-media">
+            <a href="https://www.facebook.com/Ocaes" target="_blank">Facebook</a>
+            <a href="https://x.com/ocaes_lso" target="_blank">X</a>
+            <a href="https://heylink.me/tsitsomafantiri/" target="_blank">HeyLink.me</a></p>
+  </div>
 <script>
 (function(){
 
